--- a/index.html
+++ b/index.html
@@ -262,6 +262,95 @@
 
 
 
+
+
+    
+
+
+    <section class="container testimonial_Container">
+      <h2>Students Testimonials</h2>
+      <div>
+        <article class="testimonial">
+          <div class="avatar">
+            <img src="images/images/avatar1.jpg" alt="">
+          </div>
+          <div class="testimonial_info">
+            <h5>Diana Ayi</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum at qui, saepe labore sapiente, voluptatem quos sed magnam asperiores deleniti ducimus a voluptas, soluta velit. Vero quas qui numquam.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial">
+          <div class="avatar">
+            <img src="images/images/avatar2.jpg" alt="">
+          </div>
+          <div class="testimonial_info">
+            <h5>Ernest Achiever</h5>
+            <small>Web Developer</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum at qui, saepe labore sapiente, voluptatem quos sed magnam asperiores deleniti ducimus a voluptas, soluta velit. Vero quas qui numquam.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial">
+          <div class="avatar">
+            <img src="images/images/avatar3.jpg" alt="">
+          </div>
+          <div class="testimonial_info">
+            <h5>Edem Quist</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum at qui, saepe labore sapiente, voluptatem quos sed magnam asperiores deleniti ducimus a voluptas, soluta velit. Vero quas qui numquam.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial">
+          <div class="avatar">
+            <img src="images/images/avatar4.jpg" alt="">
+          </div>
+          <div class="testimonial_info">
+            <h5>Diana Ayi</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum at qui, saepe labore sapiente, voluptatem quos sed magnam asperiores deleniti ducimus a voluptas, soluta velit. Vero quas qui numquam.
+            </p>
+          </div>
+        </article>
+
+        <article class="testimonial">
+          <div class="avatar">
+            <img src="images/images/avatar5.jpg" alt="">
+          </div>
+          <div class="testimonial_info">
+            <h5>Diana Ayi</h5>
+            <small>Student</small>
+          </div>
+          <div class="testimonial_body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque dolorum at qui, saepe labore sapiente, voluptatem quos sed magnam asperiores deleniti ducimus a voluptas, soluta velit. Vero quas qui numquam.
+            </p>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
+
+
+
   <script src="./main.js"></script>
 </body>
 </html>
